--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -2,17 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -165,7 +169,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +308,7 @@
        "4  22.0      1      1  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +382,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +551,7 @@
        "       male          466.0       0.0  25.0    0.0    0.0   7.92500"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +687,7 @@
        "       male     12.661633  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +946,7 @@
        "[177 rows x 12 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +989,7 @@
        "0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1009,7 @@
        "0.7710437710437711"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1162,7 @@
        "4      0            373450   8.0500        S  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1254,7 @@
        "829  female  62.0      0      0  113572  80.0      NaN  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1274,7 @@
        "array(['S', 'C', 'Q', nan], dtype=object)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1288,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1416,7 +1420,7 @@
        "218  female  32.0      0      0     11813   76.2917        C  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1442,13 +1446,394 @@
        "Name: Embarked, dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## checking values for embarked for similar passengers\n",
+    "\n",
     "em_null['Embarked'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "C    16\n",
+       "S    11\n",
+       "Name: Embarked, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## checking if filtering by age will affect the values\n",
+    "\n",
+    "em_null.loc[em_null['Age'] < 45]['Embarked'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "S    3\n",
+       "C    1\n",
+       "Name: Embarked, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "em_null.loc[em_null['Age'] > 45]['Embarked'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While the values in the Embarked columns are very similar when looking at similar passengers, it looks like there are more 'C' values for younger people and more 'S' values for older people. The difference isn't too skewed to be certain of these values but we'll go ahead and use 'C' for the younger passenger and 'S' for the older one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## replacing null values\n",
+    "\n",
+    "train_df.iloc[[61], [-1]] = 'C'\n",
+    "train_df.iloc[[829], [-1]] = 'S'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  891 non-null    int64  \n",
+      " 1   Survived     891 non-null    int64  \n",
+      " 2   Pclass       891 non-null    int64  \n",
+      " 3   Name         891 non-null    object \n",
+      " 4   Sex          891 non-null    object \n",
+      " 5   Age          891 non-null    float64\n",
+      " 6   SibSp        891 non-null    int64  \n",
+      " 7   Parch        891 non-null    int64  \n",
+      " 8   Ticket       891 non-null    object \n",
+      " 9   Fare         891 non-null    float64\n",
+      " 10  Embarked     891 non-null    object \n",
+      "dtypes: float64(2), int64(5), object(4)\n",
+      "memory usage: 76.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>PassengerId</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.005007</td>\n",
+       "      <td>-0.035144</td>\n",
+       "      <td>0.039033</td>\n",
+       "      <td>-0.057527</td>\n",
+       "      <td>-0.001652</td>\n",
+       "      <td>0.012658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Survived</th>\n",
+       "      <td>-0.005007</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.338481</td>\n",
+       "      <td>-0.059579</td>\n",
+       "      <td>-0.035322</td>\n",
+       "      <td>0.081629</td>\n",
+       "      <td>0.257307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pclass</th>\n",
+       "      <td>-0.035144</td>\n",
+       "      <td>-0.338481</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.413583</td>\n",
+       "      <td>0.083081</td>\n",
+       "      <td>0.018443</td>\n",
+       "      <td>-0.549500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age</th>\n",
+       "      <td>0.039033</td>\n",
+       "      <td>-0.059579</td>\n",
+       "      <td>-0.413583</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.249854</td>\n",
+       "      <td>-0.175526</td>\n",
+       "      <td>0.122692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SibSp</th>\n",
+       "      <td>-0.057527</td>\n",
+       "      <td>-0.035322</td>\n",
+       "      <td>0.083081</td>\n",
+       "      <td>-0.249854</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.414838</td>\n",
+       "      <td>0.159651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Parch</th>\n",
+       "      <td>-0.001652</td>\n",
+       "      <td>0.081629</td>\n",
+       "      <td>0.018443</td>\n",
+       "      <td>-0.175526</td>\n",
+       "      <td>0.414838</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.216225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fare</th>\n",
+       "      <td>0.012658</td>\n",
+       "      <td>0.257307</td>\n",
+       "      <td>-0.549500</td>\n",
+       "      <td>0.122692</td>\n",
+       "      <td>0.159651</td>\n",
+       "      <td>0.216225</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             PassengerId  Survived    Pclass       Age     SibSp     Parch  \\\n",
+       "PassengerId     1.000000 -0.005007 -0.035144  0.039033 -0.057527 -0.001652   \n",
+       "Survived       -0.005007  1.000000 -0.338481 -0.059579 -0.035322  0.081629   \n",
+       "Pclass         -0.035144 -0.338481  1.000000 -0.413583  0.083081  0.018443   \n",
+       "Age             0.039033 -0.059579 -0.413583  1.000000 -0.249854 -0.175526   \n",
+       "SibSp          -0.057527 -0.035322  0.083081 -0.249854  1.000000  0.414838   \n",
+       "Parch          -0.001652  0.081629  0.018443 -0.175526  0.414838  1.000000   \n",
+       "Fare            0.012658  0.257307 -0.549500  0.122692  0.159651  0.216225   \n",
+       "\n",
+       "                 Fare  \n",
+       "PassengerId  0.012658  \n",
+       "Survived     0.257307  \n",
+       "Pclass      -0.549500  \n",
+       "Age          0.122692  \n",
+       "SibSp        0.159651  \n",
+       "Parch        0.216225  \n",
+       "Fare         1.000000  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Taking a look at correlation values, it looks like passenger id has almost 0 correlation with whether or not a person will survive, and has very low correlation with all other columns. It seems like the passenger id is just a random number assigned to each passenger so we'll remove the column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Survived  Pclass                                               Name  \\\n",
+       "0         0       3                            Braund, Mr. Owen Harris   \n",
+       "1         1       1  Cumings, Mrs. John Bradley (Florence Briggs Th...   \n",
+       "2         1       3                             Heikkinen, Miss. Laina   \n",
+       "3         1       1       Futrelle, Mrs. Jacques Heath (Lily May Peel)   \n",
+       "4         0       3                           Allen, Mr. William Henry   \n",
+       "\n",
+       "      Sex   Age  SibSp  Parch            Ticket     Fare Embarked  \n",
+       "0    male  22.0      1      0         A/5 21171   7.2500        S  \n",
+       "1  female  38.0      1      0          PC 17599  71.2833        C  \n",
+       "2  female  26.0      0      0  STON/O2. 3101282   7.9250        S  \n",
+       "3  female  35.0      1      0            113803  53.1000        S  \n",
+       "4    male  35.0      0      0            373450   8.0500        S  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.drop('PassengerId', axis=1, inplace=True)\n",
+    "train_df.head()"
    ]
   },
   {
