--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -3561,7 +3561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -3702,7 +3702,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3713,17 +3713,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# drop columns that cannot be used in model and separate independent and dependent variables\n",
+    "\n",
     "X = train_df.drop(labels=['Survived', 'Name', 'Ticket'], axis=1)\n",
     "y = train_df['Survived']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3734,7 +3736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -3880,7 +3882,7 @@
        "4        0      1  0  1  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3896,7 +3898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3907,7 +3909,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## normalize our data\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "norm = MinMaxScaler().fit(X_train)\n",
+    "\n",
+    "X_train_norm = norm.transform(X_train)\n",
+    "X_test_norm = norm.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -3920,7 +3937,7 @@
        "                   warm_start=False)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3935,7 +3952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3945,7 +3962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -3969,7 +3986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -3981,6 +3998,89 @@
       "Name: Survived, dtype: int64\n",
       "0    0.798206\n",
       "1    0.201794\n",
+      "Name: Survived, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "residuals = np.abs(y_test - y_hat_test)\n",
+    "print(pd.Series(residuals).value_counts())\n",
+    "print(pd.Series(residuals).value_counts(normalize=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1000000000000.0, class_weight=None, dual=False,\n",
+       "                   fit_intercept=False, intercept_scaling=1, l1_ratio=None,\n",
+       "                   max_iter=100, multi_class='warn', n_jobs=None, penalty='l2',\n",
+       "                   random_state=None, solver='liblinear', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalized = logreg.fit(X_train_norm, y_train)\n",
+    "normalized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_hat_test = logreg.predict(X_test_norm)\n",
+    "y_hat_train = logreg.predict(X_train_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    526\n",
+      "1    142\n",
+      "Name: Survived, dtype: int64\n",
+      "0    0.787425\n",
+      "1    0.212575\n",
+      "Name: Survived, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "residuals = np.abs(y_train - y_hat_train)\n",
+    "print(pd.Series(residuals).value_counts())\n",
+    "print(pd.Series(residuals).value_counts(normalize=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    180\n",
+      "1     43\n",
+      "Name: Survived, dtype: int64\n",
+      "0    0.807175\n",
+      "1    0.192825\n",
       "Name: Survived, dtype: float64\n"
      ]
     }
